updated slide layout

--- a/timeline/client/styles/main.scss
+++ b/timeline/client/styles/main.scss
@@ -120,6 +120,10 @@
 
 .slide-view{
 	min-height: 75vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content:center;
 	h1{
 		text-align: center;
 	}
